frontend: fixed shift + enter textarea bug

--- a/client/public/styles/page/_chat.scss
+++ b/client/public/styles/page/_chat.scss
@@ -52,8 +52,8 @@
 .chat-input-cont {
   border-top: solid 1px rgba(0, 0, 0, 0.1);
   background-color: rgba(245, 245, 245, 1);
-  min-height: 89px !important;
-  max-height: 130px !important;
+  min-height: 89px;
+  max-height: 130px;
   flex: 1;
   display: flex;
   align-items: center;
@@ -64,7 +64,7 @@
   width: 100%;
   .input-cont {
     background-color: white;
-    min-height: 50px !important;
+    min-height: 50px;
     width: 80%;
     border-radius: 10px;
     display: flex;
@@ -75,7 +75,7 @@
       margin-top: 0px;
       margin-bottom: 0px;
       width: 100%;
-      height: 40px !important;
+      height: 40px;
       box-sizing: border-box;
       padding: 10px 0px 0px 0px;
       border: none;
